Fixed Hangman SVG opacity transitions Use `fill-opacity` instead of `opacity` as per https://stackoverflow.com/a/68570975 Also slightly tweaked the transition times

--- a/files/assets/styles/style.css
+++ b/files/assets/styles/style.css
@@ -154,4 +154,13 @@
 	.mb-h1 {
 		@apply mb-5 md:mb-10;
 	}
+
+	/* Needed for SVG transitions; see https://stackoverflow.com/a/68570975 */
+	.fill-opacity-0 {
+		fill-opacity: 0;
+	}
+
+	.fill-opacity-100 {
+		fill-opacity: 1;
+	}
 }
